# myth_notes

./: .gitignore  Cargo.toml  README.md  sqlx-data.json
migrations/: 20220430021850_init.sql
src/: lib.rs  main.rs  utils.rs
src/models/: mod.rs  note.rs  session.rs  user.rs
src/routes/: account.rs  index.rs  login.rs  mod.rs  notes.rs  signup.rs
templates/: account.stpl  index.stpl  login.stpl  note.stpl  notes.stpl  signup.stpl
